--- a/Grimpoteuthis/Views/LoginView.xaml
+++ b/Grimpoteuthis/Views/LoginView.xaml
@@ -9,7 +9,7 @@
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <StackPanel Width="350">
-            <TextBlock x:Name="ErrorMessage" Style="{StaticResource SubtitleTextBlockStyle}" Margin="0,12,0,12"/>
+            <TextBlock x:Name="ErrorMessage" Style="{StaticResource SubtitleTextBlockStyle}" Foreground="Red" Margin="0,12,0,12"/>
             <TextBlock Text="Username" Style="{StaticResource HeaderTextBlockStyle}" Margin="0,12,0,12"/>
             <TextBox x:Name="Username" Text="{Binding Username}"/>
             <TextBlock Text="Password" Style="{StaticResource HeaderTextBlockStyle}" Margin="0,12,0,12"/>
