--- a/Grimpoteuthis/Views/LoginView.xaml
+++ b/Grimpoteuthis/Views/LoginView.xaml
@@ -15,6 +15,11 @@
             <TextBlock Text="Password" Style="{StaticResource HeaderTextBlockStyle}" Margin="0,12,0,12"/>
             <PasswordBox x:Name="Password" Password="{Binding Password}"/>
             <Button x:Name="LoginButton" Command="{Binding LoginCommand}" Content="Login" Margin="0,12,0,0" HorizontalAlignment="Right"/>
+            <StackPanel x:Name="OneTimePasswordDetails">
+                <TextBlock Text="One Time Password" Style="{StaticResource SubheaderTextBlockStyle}" Margin="0,12,0,12"/>
+                <TextBox x:Name="OneTimePassword" Text="{Binding OneTimePassword}"/>
+                <Button x:Name="TwoFactorButton" Content="Authenticate" Margin="0,12,0,0" HorizontalAlignment="Right"/>
+            </StackPanel>
         </StackPanel>
     </Grid>
 </Page>
